typescript/checker/tests/conformance/expressions/typeGuards/typePredicateOnVariableDeclaration01.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            29,
        ),
        hi: BytePos(
            30,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typePredicateOnVariableDeclaration01.ts:3:5
  |
3 | var x: this is string;
  |     ^

